tests/security/taintIntoExec/output.txt
ERROR: TaintedData - input.hack:3:10 - Data from a URL query string found its way to a shell command